# klayout-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  github-release.yml  release-please.yml  release.yml
docs/: clients.md  development.md  getting-started.md  index.md  reference.md
docs/plans/: 2026-03-05-klayout-observer-mcp-design.md  2026-03-05-klayout-observer-mcp-implementation-plan.md  2026-03-06-pypi-install-plan.md
docs/specs/: 2026-03-05-klayout-observer-mcp-contract.md
examples/mcp/: README.md  claude-code.mcp.json  codex.config.toml  opencode.json
src/klayout_mcp/: __init__.py  config.py  errors.py  models.py  server.py  session_store.py
src/klayout_mcp/bridge/: analyze.py  drc.py  hierarchy.py  layout_loader.py  measure.py  query.py  render.py
src/klayout_mcp/tools/: layout_tools.py
tests/: conftest.py  test_analyze_waveguide.py  test_commenting_standards.py  test_commit_conventions.py  test_config.py  test_contract_smoke.py  test_describe_cell.py  test_docs_site.py  test_error_paths.py  test_extract_markers.py  test_github_workflows.py  test_layout_factory.py  test_list_cells.py  test_list_layers.py  test_measure_geometry.py  test_open_layout.py  test_packaging_metadata.py  test_query_region.py  test_render_view.py  test_run_drc_script.py  test_server_entrypoint.py  test_server_smoke.py  test_session_store.py
tests/fixtures/: __init__.py  layout_factory.py
tests/fixtures/drc/: min_space.drc
