[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klayout-mcp"
version = "0.2.1"
description = "Observer-first MCP server for KLayout layout inspection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "klayout>=0.30.6,<0.31",
  "mcp>=1.26.0,<2",
  "Pillow>=11.3.0,<12",
  "pydantic-settings>=2.13.1,<3",
]

[project.scripts]
klayout-mcp = "klayout_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pre-commit>=4.2.0,<5",
  "pytest>=9.0.2,<10",
  "pytest-cov>=7.0.0,<8",
  "ruff>=0.15.5,<0.16",
]
docs = [
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.7.0,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
